# soilfauna-measure

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: build-windows.yml
docs/: DEPENDENCY_SLIM.md  PACKAGING.md  USER_GUIDE.md  WINDOWS_PACKAGING_SETUP.md  milestones.md
examples/: README.md
examples/images/: HJ98.tif
scripts/: SoilFaunaMeasure.spec  build_macos.py  build_windows.bat  build_windows.py  run_dev.py
scripts/installer/: SoilFaunaMeasure.iss
src/soilfauna_measure/: __init__.py  __main__.py  crash_handler.py  logging_config.py  main.py
src/soilfauna_measure/commands/: __init__.py  base_command.py  length_commands.py
src/soilfauna_measure/core/: __init__.py  calibration.py  coordinate_utils.py  image_loader.py  mask_operations.py  measurement.py  scale_detection.py  segmentation.py  skeleton.py
src/soilfauna_measure/exporters/: __init__.py  image_export.py  table_export.py
src/soilfauna_measure/models/: __init__.py  calibration.py  category.py  image_record.py  project.py  specimen.py
src/soilfauna_measure/resources/: __init__.py
src/soilfauna_measure/services/: __init__.py  app_settings.py  export_service.py  image_service.py  object_service.py  thumbnail_service.py
tests/: conftest.py  test_app_settings.py  test_calibration.py  test_coordinate_utils.py  test_export.py  test_image_loader.py  test_length_persist.py  test_length_split.py  test_mask_operations.py  test_measurement.py  test_object_service.py  test_project_io.py  test_scale_detection.py  test_segmentation.py  test_skeleton.py  test_workspace.py
(+21 files in other folders)
